<resources>
    <string name="app_name">"Control Calidad"</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <string name="item_inicio">DASHBOARD</string>
    <string name="item_cuenta">MI CUENTA</string>
    <string name="item_categorias">NUEVO ENSAYO</string>
    <string name="item_configuracion">CONFIGURACION</string>

    <string name="titulo_sesiones">Selección de calidad</string>

    <string name="titulo_tab_material">Ensayo</string>
    <string name="titulo_tab_forma">Defecto forma</string>
    <string name="titulo_tab_piedras">Defecto piedra</string>
    <string name="titulo_tab_comentario">Información</string>

    <string name="titulo_tab_perfil">Perfil</string>
    <string name="titulo_tab_direcciones">Canteras y naves</string>
    <string name="titulo_tab_tarjetas">Desarrollo</string>

    <string name="account_titulo_nave">Designación de Nave</string>
    <string name="account_descripcion_nave">Seleccione la nave</string>

    <string name="about_titulo">ControlCalidad</string>
    <string name="about_developed">Departamento de Sistemas - CupaGroup </string>
    <string name="about_programer">Desarrollado por Alejandro López Rosales</string>
    <string name="about_programer_mail">malopez@cupagroup.com</string>
    <string name="about_programer_phone">+32 629 262 891</string>
    <string name="about_version">Versión</string>

    <string name="etiqueta_carrito">Carrito</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="etiqueta_info_general">Información general</string>
    <string name="texto_comentario">Comentario sobre el ensayo</string>

    <string name="hint_campos">0</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Preferences Fields -->
    <string name="user_category">Centros &amp; Almacenistas</string>
    <string name="user_name_title">Nombre</string>
    <string name="user_name_summary">Seleccione un almacenista</string>
    <string name="centro_name_title">Centros de Trabajo</string>
    <string name="centro_name_summary">Seleccione un centro</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">No account yet? Create one</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_in">Ingrese</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="finalizar_control">Finalizar control</string>
    <string name="finalizar_ensayo">Añadir ensayo</string>

    <!-- Custom Dialog -->
    <string name="label_comment">Observaciones</string>
    <string name="label_type_your_comment">Ser específico, denota inteligencia</string>
    <string name="label_submit">Guardar</string>
    <string name="label_cancel">Cancelar</string>

    <!-- Custom Radio Buttom User Preference -->
    <string name="label_user_pref">Usuarios registrados</string>

    <!-- Custom Radio Buttom User Preference -->
    <string name="label_nave_pref">Naves asociadas</string>
    <string name="loading">Guardando...</string>
    <string name="flotante">Boton Flotante</string>
    <string name="account_direccion_nave">Ninguna nave seleccionada</string>
    <string name="count_text">99</string>
    <string name="ref_comercial">Valiñas 2</string>
    <string name="text_descripcion">Descripción del ensayo evaluado</string>
    <string name="email_text">malopez@cupagroup.com</string>
    <string name="nombre_text">Alejandro López</string>
    <string name="etiqueta_info_comment">Comentario</string>
    <string name="etiqueta_info_history">Lista de ensayos realizados</string>
</resources>