<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="top|center"
        android:layout_weight="1"
        android:layout_marginTop="-130dp"
        android:layout_marginBottom="-150dp"
        card_view:lottie_autoPlay="true"
        card_view:lottie_loop="true"
        card_view:lottie_rawRes="@raw/my_account" />

    <TextView
        android:id="@+id/account_nave_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:text="@string/account_titulo_nave"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/naveLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <TextView
                android:id="@+id/account_nave_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"

                android:drawablePadding="@dimen/space_12"
                android:text="@string/account_descripcion_nave"
                android:textAppearance="?android:attr/textAppearanceSmall"

                app:drawableTint="@color/grey_dark"
                card_view:drawableLeftCompat="@drawable/ic_work"/>

            <TextView
                android:id="@+id/account_nave_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_nave_nombre"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@+id/account_set_nave"

                android:layout_marginTop="@dimen/space_14"

                android:drawablePadding="@dimen/space_12"
                android:text="@string/account_direccion_nave"
                app:drawableTint="@color/grey_dark"
                card_view:drawableLeftCompat="@drawable/ic_place" />

            <TextView
                android:id="@+id/texto_responsable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/account_nave_address"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/space_14"
                android:gravity="center"

                android:text="Responsable: Alejandro López"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:drawableTint="@color/grey_dark"
                android:drawablePadding="@dimen/space_12"
                card_view:drawableLeftCompat="@drawable/ic_contact_mail" />

            <ImageView
                android:id="@+id/account_set_nave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/indicador_derecho" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!-- BLOQUE DE USUARIO -->
    <TextView
        android:id="@+id/titulo_informacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="@string/etiqueta_info_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="@dimen/espacio_norma_1"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/usuario" />

            <TextView
                android:id="@+id/texto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="left"
                android:layout_marginBottom="32dp"
                android:text="@string/nombre_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/texto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="left"
                android:text="@string/email_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/ic_user_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_row="0"
                android:layout_rowSpan="2"
                android:layout_column="2"
                android:src="@drawable/indicador_derecho" />


        </GridLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>